# messagedb-agent

./: .gitignore  CLAUDE.md  README.md  basic-python.md  cli  cli.env  docker-compose.test.yml  docker-compose.yml  implementation-decisions.md  notes.md  pyproject.toml  spec.md  tasks.md  tui
.beads/: config.json  issues.jsonl
.claude/sessions/: 2025-10-27-anything-in-beads.txt  2025-10-27-in-beads-there-is-an-epic-for-phase-13-its-child.txt  2025-10-27-read-specmd-find-the-beads-issue-for-task-131-a.txt  2025-10-27-read-tasksmd-all-of-the-tasks-have-correspondi.txt  2025-10-28-start-working-on-messagedb-agent-80.txt  2025-10-29-start-working-on-messagedb-agent-96.txt
src/messagedb_agent/: __init__.py  __main__.py  cli.py  config.py  output.py
src/messagedb_agent/display/: __init__.py  agent_runner.py  models.py  progress.py  renderer.py  service.py
src/messagedb_agent/display/static/: app.js
src/messagedb_agent/display/templates/: index.html
src/messagedb_agent/engine/: __init__.py  loop.py  session.py
src/messagedb_agent/engine/steps/: __init__.py  llm.py  tool.py
src/messagedb_agent/events/: __init__.py  agent.py  base.py  display.py  system.py  tool.py  user.py
src/messagedb_agent/llm/: __init__.py  base.py  call.py  claude_client.py  client.py  factory.py  format.py  gemini_client.py  prompts.py
src/messagedb_agent/projections/: __init__.py  base.py  display_prefs.py  llm_context.py  next_step.py  session_state.py  tool_args.py
src/messagedb_agent/store/: __init__.py  category.py  client.py  operations.py  stream.py
src/messagedb_agent/subscriber/: __init__.py  base.py  handlers.py  position.py
src/messagedb_agent/tools/: __init__.py  builtin.py  display_tools.py  executor.py  registry.py  schema.py
src/messagedb_agent/tui/: __init__.py  __main__.py  app.py  approval_modal.py  widgets.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_e2e_integration.py  test_full_workflow_integration.py
tests/display/: __init__.py  test_agent_runner.py  test_renderer.py  test_service.py
tests/engine/: __init__.py  test_loop.py  test_session.py
tests/engine/steps/: __init__.py  test_llm.py  test_tool.py
tests/events/: test_agent.py  test_base.py  test_system.py  test_user.py
tests/llm/: README.md  test_integration.py  test_prompts.py  test_streaming_integration.py  test_unified_integration.py
tests/projections/: __init__.py  test_base.py  test_llm_context.py  test_next_step.py  test_session_state.py  test_tool_args.py
tests/store/: test_category.py  test_operations.py  test_stream.py
tests/subscriber/: __init__.py  test_base.py  test_handlers.py  test_position.py  test_position_integration.py
tests/tools/: test_builtin.py  test_display_tools.py  test_executor.py  test_registry.py  test_schema.py
